--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,27 @@
     <head>
         <meta charset="utf-8">
         <title>SuperSports</title>
+        <!-- Bootstrap -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <!-- Stylesheet -->
         <link rel="stylesheet" href="assets/stylesheets/main.css">
     </head>
     <body>
-        <h1>Hello</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-1 bg-warning">1</div>
+                <div class="col-lg-1 bg-info">2</div>
+                <div class="col-lg-1 bg-danger">3</div>
+                <div class="col-lg-1 bg-success">4</div>
+                <div class="col-lg-1 bg-warning">5</div>
+                <div class="col-lg-1 bg-info">6</div>
+                <div class="col-lg-1 bg-danger">7</div>
+                <div class="col-lg-1 bg-success">8</div>
+                <div class="col-lg-1 bg-warning">9</div>
+                <div class="col-lg-1 bg-info">10</div>
+                <div class="col-lg-1 bg-danger">11</div>
+                <div class="col-lg-1 bg-success">12</div>
+            </div>
+        </div>
     </body>
 </html>
