Added reset, links and fonts SASS partials

--- a/public/index.html
+++ b/public/index.html
@@ -25,5 +25,7 @@
                 <div class="col-lg-1 bg-success">12</div>
             </div>
         </div>
+        <p class="one">RIGHT</p>
+        <p class="two">RIGHT</p>
     </body>
 </html>
