--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>SuperSports</title>
-        <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- Stylesheet -->
         <link rel="stylesheet" href="assets/stylesheets/main.css">
+        <!-- Fontawesome -->
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     </head>
     <body>
         <div class="container">
@@ -25,7 +26,35 @@
                 <div class="col-lg-1 bg-success">12</div>
             </div>
         </div>
-        <p class="one">RIGHT</p>
-        <p class="two">RIGHT</p>
+
+        <div class="header container">
+            <div class="row justify-content-between py-4">
+                <div class="col-lg-3 d-flex align-items-center">
+                    <img class="img-fluid" src="assets/imgs/logo.png" alt="Super Sports Logo">
+                </div>
+                <div class="col-lg-6 d-flex justify-content-between align-items-center">
+                    <a href="tel:+4522660077"><i class="fa fa-phone" aria-hidden="true"></i>  +45 22 66 00 77</a>
+                    <a href="mailto:contact@supersports.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>  CONTACT@SUPERSPORTS.com</a>
+                    <button class="px-4 py-2" type="button" name="checkout"><i class="fa fa-shopping-cart" aria-hidden="true"></i> $ 99.54 CHECKOUT</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="splitter"></div>
+                </div>
+            </div>
+            <div class="row justify-content-between py-2">
+                <div class="col-lg-8">
+                    menu77
+                </div>
+                <div class="col-lg-2">
+                    <input type="text" name="search" placeholder="Search...">
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row line line--big"></div>
+            <div class="row line line--small"></div>
+        </div>
     </body>
 </html>
