Finalized dropdown menu, in header

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <title>SuperSports</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- Bootstrap -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
         <!-- Stylesheet -->
         <link rel="stylesheet" href="assets/stylesheets/main.css">
         <!-- Fontawesome -->
@@ -30,12 +32,12 @@
         <div class="header container">
             <div class="row justify-content-between py-4">
                 <div class="col-lg-3 d-flex align-items-center">
-                    <img class="img-fluid" src="assets/imgs/logo.png" alt="Super Sports Logo">
+                    <a href="#"><img class="img-fluid" src="assets/imgs/logo.png" alt="Super Sports Logo"></a>
                 </div>
                 <div class="col-lg-6 d-flex justify-content-between align-items-center">
-                    <a href="tel:+4522660077"><i class="fa fa-phone" aria-hidden="true"></i>  +45 22 66 00 77</a>
-                    <a href="mailto:contact@supersports.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>  CONTACT@SUPERSPORTS.com</a>
-                    <button class="px-4 py-2" type="button" name="checkout"><i class="fa fa-shopping-cart" aria-hidden="true"></i> $ 99.54 CHECKOUT</button>
+                    <a href="tel:+4522660077"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;&nbsp;+45&nbsp;22&nbsp;66&nbsp;00&nbsp;77</a>
+                    <a href="mailto:contact@supersports.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;&nbsp;LOREM@IPSUM.com</a>
+                    <button class="px-4 py-2" type="button" name="checkout"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;&nbsp;$&nbsp;99.54&nbsp;&nbsp;&nbsp;CHECKOUT</button>
                 </div>
             </div>
             <div class="row">
@@ -44,8 +46,84 @@
                 </div>
             </div>
             <div class="row justify-content-between py-2">
-                <div class="col-lg-8">
-                    menu77
+                <div class="col-lg-8 d-flex justify-content-between align-items-center">
+
+                    <div class="dropdown">
+                        <a class="dropdown-toggle" href="#" data-toggle="dropdown">HOME</a>
+                        <div class="dropdown-menu">
+                            <a href="" class="dropdown-item">ITEM 1</a>
+                            <a href="" class="dropdown-item">ITEM 2</a>
+                            <a href="" class="dropdown-item">ITEM 3</a>
+                            <a href="" class="dropdown-item">ITEM 4</a>
+                        </div>
+                    </div>
+
+
+                    <div class="dropdown">
+                        <a class="dropdown-toggle" href="#" data-toggle="dropdown">MEN</a>
+                        <div class="dropdown-menu">
+                            <a href="" class="dropdown-item">ITEM 1</a>
+                            <a href="" class="dropdown-item">ITEM 2</a>
+                            <a href="" class="dropdown-item">ITEM 3</a>
+                            <a href="" class="dropdown-item">ITEM 4</a>
+                        </div>
+                    </div>
+
+
+                    <div class="dropdown">
+                        <a class="dropdown-toggle" href="#" data-toggle="dropdown">WOMEN</a>
+                        <div class="dropdown-menu">
+                            <a href="" class="dropdown-item">ITEM 1</a>
+                            <a href="" class="dropdown-item">ITEM 2</a>
+                            <a href="" class="dropdown-item">ITEM 3</a>
+                            <a href="" class="dropdown-item">ITEM 4</a>
+                        </div>
+                    </div>
+
+
+                    <div class="dropdown">
+                        <a class="dropdown-toggle" href="#" data-toggle="dropdown">KIDS</a>
+                        <div class="dropdown-menu">
+                            <a href="" class="dropdown-item">ITEM 1</a>
+                            <a href="" class="dropdown-item">ITEM 2</a>
+                            <a href="" class="dropdown-item">ITEM 3</a>
+                            <a href="" class="dropdown-item">ITEM 4</a>
+                        </div>
+                    </div>
+
+
+                    <div class="dropdown">
+                        <a class="dropdown-toggle" href="#" data-toggle="dropdown">SALE</a>
+                        <div class="dropdown-menu">
+                            <a href="" class="dropdown-item">ITEM 1</a>
+                            <a href="" class="dropdown-item">ITEM 2</a>
+                            <a href="" class="dropdown-item">ITEM 3</a>
+                            <a href="" class="dropdown-item">ITEM 4</a>
+                        </div>
+                    </div>
+
+
+                    <div class="dropdown">
+                        <a class="dropdown-toggle" href="#" data-toggle="dropdown">ABOUT US</a>
+                        <div class="dropdown-menu">
+                            <a href="" class="dropdown-item">ITEM 1</a>
+                            <a href="" class="dropdown-item">ITEM 2</a>
+                            <a href="" class="dropdown-item">ITEM 3</a>
+                            <a href="" class="dropdown-item">ITEM 4</a>
+                        </div>
+                    </div>
+
+
+                    <div class="dropdown">
+                        <a class="dropdown-toggle" href="#" data-toggle="dropdown">SUPPORT</a>
+                        <div class="dropdown-menu">
+                            <a href="" class="dropdown-item">ITEM 1</a>
+                            <a href="" class="dropdown-item">ITEM 2</a>
+                            <a href="" class="dropdown-item">ITEM 3</a>
+                            <a href="" class="dropdown-item">ITEM 4</a>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="col-lg-2">
                     <input type="text" name="search" placeholder="Search...">
@@ -56,5 +134,10 @@
             <div class="row line line--big"></div>
             <div class="row line line--small"></div>
         </div>
+
+        <!-- jQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <!-- Bootstrap javascript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     </body>
 </html>
