--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,8 @@
                     </div>
 
                 </div>
-                <div class="col-lg-2">
+                <div class="searchbar col-lg-2 d-flex justify-content-between align-items-center">
+                    <i class="fa fa-search" aria-hidden="true"></i>&nbsp;
                     <input type="text" name="search" placeholder="Search...">
                 </div>
             </div>
