--- a/public/index.html
+++ b/public/index.html
@@ -153,12 +153,12 @@
                                 <button class="px-4 py-2" type="button" name="call-to-action">SHOP BRASIL</button>
                             </div>
                         </div>
-                        <!-- <div class="carousel-item">
+                        <div class="carousel-item">
                             <img class="d-block img-fluid" src="assets/imgs/slider/2.jpg" alt="Second slide">
                         </div>
                         <div class="carousel-item">
                             <img class="d-block img-fluid" src="assets/imgs/slider/3.jpg" alt="Third slide">
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
