Fixed and finnished img slider + fixed red lines at bottom of header

--- a/public/index.html
+++ b/public/index.html
@@ -130,39 +130,42 @@
                     <input type="text" name="search" placeholder="Search...">
                 </div>
             </div>
+            <!-- <div class="row line"></div> -->
+
         </header>
         <div class="container-fluid">
-            <div class="row line line--big"></div>
-            <div class="row line line--small"></div>
+            <div class="line"></div>
         </div>
 
-        <main id="homepage" class="container-fluid">
-            <div id="slider" class="row">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner" role="listbox">
-                        <div class="carousel-item active">
-                            <img class="d-block img-fluid" src="assets/imgs/slider/1.jpg" alt="First slide">
-                            <div class="carousel-caption">
-                                <h1>RIGHT IS PINK.</br>LEFT IS BLUE</h1>
-                                <p>Inspired by Brasil’s bold colors and matching up to football’s on-pitch</br>playmakers, these kicks are ready to stand out.</p>
-                                <button class="px-4 py-2" type="button" name="call-to-action">SHOP BRASIL</button>
+        <div class="container-fluid">
+            <div class="row">
+                <div id="slider" class="col-lg-12">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <img class="d-block img-fluid" src="assets/imgs/slider/1.jpg" alt="First slide">
+                                <div class="carousel-caption">
+                                    <h1>RIGHT IS PINK.</br>LEFT IS BLUE</h1>
+                                    <p>Inspired by Brasil’s bold colors and matching up to football’s on-pitch</br>playmakers, these kicks are ready to stand out.</p>
+                                    <button class="px-4 py-2" type="button" name="call-to-action">SHOP BRASIL</button>
+                                </div>
                             </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block img-fluid" src="assets/imgs/slider/2.jpg" alt="Second slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block img-fluid" src="assets/imgs/slider/3.jpg" alt="Third slide">
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid" src="assets/imgs/slider/2.jpg" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid" src="assets/imgs/slider/3.jpg" alt="Third slide">
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </main>
+        </div>
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <!-- Bootstrap javascript -->
