--- a/public/index.html
+++ b/public/index.html
@@ -12,23 +12,6 @@
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     </head>
     <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-1 bg-warning">1</div>
-                <div class="col-lg-1 bg-info">2</div>
-                <div class="col-lg-1 bg-danger">3</div>
-                <div class="col-lg-1 bg-success">4</div>
-                <div class="col-lg-1 bg-warning">5</div>
-                <div class="col-lg-1 bg-info">6</div>
-                <div class="col-lg-1 bg-danger">7</div>
-                <div class="col-lg-1 bg-success">8</div>
-                <div class="col-lg-1 bg-warning">9</div>
-                <div class="col-lg-1 bg-info">10</div>
-                <div class="col-lg-1 bg-danger">11</div>
-                <div class="col-lg-1 bg-success">12</div>
-            </div>
-        </div>
-
         <header class="container">
             <div class="row justify-content-between py-4">
                 <div class="col-lg-3 d-flex align-items-center">
@@ -134,7 +117,7 @@
 
         </header>
         <div class="container-fluid">
-            <div class="line"></div>
+            <div class="line--red"></div>
         </div>
 
         <div class="container-fluid">
@@ -166,6 +149,51 @@
                 </div>
             </div>
         </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-1 bg-warning">1</div>
+                <div class="col-lg-1 bg-info">2</div>
+                <div class="col-lg-1 bg-danger">3</div>
+                <div class="col-lg-1 bg-success">4</div>
+                <div class="col-lg-1 bg-warning">5</div>
+                <div class="col-lg-1 bg-info">6</div>
+                <div class="col-lg-1 bg-danger">7</div>
+                <div class="col-lg-1 bg-success">8</div>
+                <div class="col-lg-1 bg-warning">9</div>
+                <div class="col-lg-1 bg-info">10</div>
+                <div class="col-lg-1 bg-danger">11</div>
+                <div class="col-lg-1 bg-success">12</div>
+            </div>
+        </div>
+
+        <main class="container pt-5 pb-4">
+            <div id="highlights" class="row">
+                <div class="col-lg-4">
+                    <a href="#"><img class="img-fluid mb-4" src="assets/imgs/highlights/1.jpg" alt="football shoes"></a>
+                    <a href="#">FOOTBALL SHOES</a>
+                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipiscing,</br>vivamus congue nulla leo, quis imperdiet magna.</p>
+                </div>
+                <div class="col-lg-4">
+                    <a href="#"><img class="img-fluid mb-4" src="assets/imgs/highlights/2.jpg" alt="modern clothes"></a>
+                    <a href="#">MODERN CLOTHES</a>
+                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipiscing,</br>vivamus congue nulla leo, quis imperdiet magna.</p>
+                </div>
+                <div class="col-lg-4">
+                    <a href="#"><img class="img-fluid mb-4" src="assets/imgs/highlights/3.jpg" alt="accessories"></a>
+                    <a href="#">BAGS & ACCESSORIES</a>
+                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipiscing,</br>vivamus congue nulla leo, quis imperdiet magna.</p>
+                </div>
+            </div>
+
+            <div class="row justify-content-center mt-5 mb-4">
+                <div class="col-lg-6 d-flex justify-content-between align-items-center">
+                    <div class="line--grey"></div>
+                    <h2 class="mx-4">POPULAR PRODUCTS</h2>
+                    <div class="line--grey"></div>
+                </div>
+            </div>
+        </main>
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <!-- Bootstrap javascript -->
