Finnished homepage content

--- a/public/index.html
+++ b/public/index.html
@@ -150,23 +150,6 @@
             </div>
         </div>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-1 bg-warning">1</div>
-                <div class="col-lg-1 bg-info">2</div>
-                <div class="col-lg-1 bg-danger">3</div>
-                <div class="col-lg-1 bg-success">4</div>
-                <div class="col-lg-1 bg-warning">5</div>
-                <div class="col-lg-1 bg-info">6</div>
-                <div class="col-lg-1 bg-danger">7</div>
-                <div class="col-lg-1 bg-success">8</div>
-                <div class="col-lg-1 bg-warning">9</div>
-                <div class="col-lg-1 bg-info">10</div>
-                <div class="col-lg-1 bg-danger">11</div>
-                <div class="col-lg-1 bg-success">12</div>
-            </div>
-        </div>
-
         <main class="container pt-5 pb-4">
             <div id="highlights" class="row">
                 <div class="col-lg-4">
@@ -193,7 +176,266 @@
                     <div class="line--grey"></div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="product col-lg-3 mb-4">
+                    <div>
+                        <div class="stars d-flex p-1">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                            <i class="fa fa-star-o" aria-hidden="true"></i>
+                        </div>
+                        <a href="#"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
+                        <div class="product--description px-3 mt-3 pb-2">
+                            <a href="#">GEL-FUJITRABUCO 5 G-Tx</a>
+                            <h4 class="my-1">RUNNING SHOE</h4>
+                            <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
+                        </div>
+                        <div class="price d-flex justify-content-end align-items-center px-3 py-2">
+                            <p>$ 86.99</p>
+                            <a href="#">
+                                <span>
+                                    <i class="mr-1 fa fa-heart-o fa-2x" aria-hidden="true"></i>
+                                </span>
+                            </a>
+                            <a href="#">
+                                <span class="fa-stack">
+                                    <i class="fa fa-circle-thin fa-stack-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-plus fa-stack-1x" aria-hidden="true"></i>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                    <button class="py-2" type="button" name="buy">BUY NOW</button>
+                </div>
+
+                <div class="product col-lg-3 mb-4">
+                    <div>
+                        <div class="stars d-flex p-1">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                            <i class="fa fa-star-o" aria-hidden="true"></i>
+                        </div>
+                        <a href="#"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
+                        <div class="product--description px-3 mt-3 pb-2">
+                            <a href="#">GEL-FUJITRABUCO 5 G-Tx</a>
+                            <h4 class="my-1">RUNNING SHOE</h4>
+                            <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
+                        </div>
+                        <div class="price d-flex justify-content-end align-items-center px-3 py-2">
+                            <p>$ 86.99</p>
+                            <a href="#">
+                                <span>
+                                    <i class="mr-1 fa fa-heart-o fa-2x" aria-hidden="true"></i>
+                                </span>
+                            </a>
+                            <a href="#">
+                                <span class="fa-stack">
+                                    <i class="fa fa-circle-thin fa-stack-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-plus fa-stack-1x" aria-hidden="true"></i>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                    <button class="py-2" type="button" name="buy">BUY NOW</button>
+                </div>
+
+                <div class="product col-lg-3 mb-4">
+                    <div>
+                        <div class="stars d-flex p-1">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                            <i class="fa fa-star-o" aria-hidden="true"></i>
+                        </div>
+                        <a href="#"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
+                        <div class="product--description px-3 mt-3 pb-2">
+                            <a href="#">GEL-FUJITRABUCO 5 G-Tx</a>
+                            <h4 class="my-1">RUNNING SHOE</h4>
+                            <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
+                        </div>
+                        <div class="price d-flex justify-content-end align-items-center px-3 py-2">
+                            <p>$ 86.99</p>
+                            <a href="#">
+                                <span>
+                                    <i class="mr-1 fa fa-heart-o fa-2x" aria-hidden="true"></i>
+                                </span>
+                            </a>
+                            <a href="#">
+                                <span class="fa-stack">
+                                    <i class="fa fa-circle-thin fa-stack-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-plus fa-stack-1x" aria-hidden="true"></i>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                    <button class="py-2" type="button" name="buy">BUY NOW</button>
+                </div>
+
+                <div class="product col-lg-3 mb-4">
+                    <div>
+                        <div class="stars d-flex p-1">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                            <i class="fa fa-star-o" aria-hidden="true"></i>
+                        </div>
+                        <a href="#"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
+                        <div class="product--description px-3 mt-3 pb-2">
+                            <a href="#">GEL-FUJITRABUCO 5 G-Tx</a>
+                            <h4 class="my-1">RUNNING SHOE</h4>
+                            <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
+                        </div>
+                        <div class="price d-flex justify-content-end align-items-center px-3 py-2">
+                            <p>$ 86.99</p>
+                            <a href="#">
+                                <span>
+                                    <i class="mr-1 fa fa-heart-o fa-2x" aria-hidden="true"></i>
+                                </span>
+                            </a>
+                            <a href="#">
+                                <span class="fa-stack">
+                                    <i class="fa fa-circle-thin fa-stack-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-plus fa-stack-1x" aria-hidden="true"></i>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                    <button class="py-2" type="button" name="buy">BUY NOW</button>
+                </div>
+
+                <div class="product col-lg-3 mb-4">
+                    <div>
+                        <div class="stars d-flex p-1">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                            <i class="fa fa-star-o" aria-hidden="true"></i>
+                        </div>
+                        <a href="#"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
+                        <div class="product--description px-3 mt-3 pb-2">
+                            <a href="#">GEL-FUJITRABUCO 5 G-Tx</a>
+                            <h4 class="my-1">RUNNING SHOE</h4>
+                            <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
+                        </div>
+                        <div class="price d-flex justify-content-end align-items-center px-3 py-2">
+                            <p>$ 86.99</p>
+                            <a href="#">
+                                <span>
+                                    <i class="mr-1 fa fa-heart-o fa-2x" aria-hidden="true"></i>
+                                </span>
+                            </a>
+                            <a href="#">
+                                <span class="fa-stack">
+                                    <i class="fa fa-circle-thin fa-stack-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-plus fa-stack-1x" aria-hidden="true"></i>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                    <button class="py-2" type="button" name="buy">BUY NOW</button>
+                </div>
+
+                <div class="product col-lg-3 mb-4">
+                    <div>
+                        <div class="stars d-flex p-1">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                            <i class="fa fa-star-o" aria-hidden="true"></i>
+                        </div>
+                        <a href="#"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
+                        <div class="product--description px-3 mt-3 pb-2">
+                            <a href="#">GEL-FUJITRABUCO 5 G-Tx</a>
+                            <h4 class="my-1">RUNNING SHOE</h4>
+                            <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
+                        </div>
+                        <div class="price d-flex justify-content-end align-items-center px-3 py-2">
+                            <p>$ 86.99</p>
+                            <a href="#">
+                                <span>
+                                    <i class="mr-1 fa fa-heart-o fa-2x" aria-hidden="true"></i>
+                                </span>
+                            </a>
+                            <a href="#">
+                                <span class="fa-stack">
+                                    <i class="fa fa-circle-thin fa-stack-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-plus fa-stack-1x" aria-hidden="true"></i>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                    <button class="py-2" type="button" name="buy">BUY NOW</button>
+                </div>
+
+                <div class="product col-lg-3 mb-4">
+                    <div>
+                        <div class="stars d-flex p-1">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                            <i class="fa fa-star-o" aria-hidden="true"></i>
+                        </div>
+                        <a href="#"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
+                        <div class="product--description px-3 mt-3 pb-2">
+                            <a href="#">GEL-FUJITRABUCO 5 G-Tx</a>
+                            <h4 class="my-1">RUNNING SHOE</h4>
+                            <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
+                        </div>
+                        <div class="price d-flex justify-content-end align-items-center px-3 py-2">
+                            <p>$ 86.99</p>
+                            <a href="#">
+                                <span>
+                                    <i class="mr-1 fa fa-heart-o fa-2x" aria-hidden="true"></i>
+                                </span>
+                            </a>
+                            <a href="#">
+                                <span class="fa-stack">
+                                    <i class="fa fa-circle-thin fa-stack-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-plus fa-stack-1x" aria-hidden="true"></i>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                    <button class="py-2" type="button" name="buy">BUY NOW</button>
+                </div>
+
+
+            </div>
         </main>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-1 bg-warning">1</div>
+                <div class="col-lg-1 bg-info">2</div>
+                <div class="col-lg-1 bg-danger">3</div>
+                <div class="col-lg-1 bg-success">4</div>
+                <div class="col-lg-1 bg-warning">5</div>
+                <div class="col-lg-1 bg-info">6</div>
+                <div class="col-lg-1 bg-danger">7</div>
+                <div class="col-lg-1 bg-success">8</div>
+                <div class="col-lg-1 bg-warning">9</div>
+                <div class="col-lg-1 bg-info">10</div>
+                <div class="col-lg-1 bg-danger">11</div>
+                <div class="col-lg-1 bg-success">12</div>
+            </div>
+        </div>
+
+        <footer>
+            <div class="container">
+                <div class="row">
+                </div>
+            </div>
+        </footer>
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <!-- Bootstrap javascript -->
