--- a/public/index.html
+++ b/public/index.html
@@ -431,8 +431,31 @@
         </div>
 
         <footer>
-            <div class="container">
-                <div class="row">
+            <div class="newsletter">
+                <div class="container py-4">
+                    <div class="row my-3 justify-content-between align-items-center">
+                        <div class="col-lg-6">
+                            <h3>SIGN UP FOR EXCLUSIVE SALES AND PRODUCT NEWS</h3>
+                        </div>
+                        <div class="col-lg-4">
+                            <form id="signup" class="d-flex justify-content-between">
+                                <input class="px-3" type="text" name="email" placeholder="LOREM@IPUSM.COM">
+                                <button class="ml-3 px-4 py-3" type="submit" form="signup" name="submit">SIGN UP</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3">
+                            <h3>OUR STORES</h3>
+                            <p>kjhkj</p>
+                        </div>
+                        <div class="col-lg-3"></div>
+                        <div class="col-lg-3"></div>
+                    </div>
                 </div>
             </div>
         </footer>
