--- a/public/index.html
+++ b/public/index.html
@@ -113,8 +113,6 @@
                     <input type="text" name="search" placeholder="Search...">
                 </div>
             </div>
-            <!-- <div class="row line"></div> -->
-
         </header>
         <div class="container-fluid">
             <div class="line--red"></div>
@@ -413,23 +411,6 @@
             </div>
         </main>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-1 bg-warning">1</div>
-                <div class="col-lg-1 bg-info">2</div>
-                <div class="col-lg-1 bg-danger">3</div>
-                <div class="col-lg-1 bg-success">4</div>
-                <div class="col-lg-1 bg-warning">5</div>
-                <div class="col-lg-1 bg-info">6</div>
-                <div class="col-lg-1 bg-danger">7</div>
-                <div class="col-lg-1 bg-success">8</div>
-                <div class="col-lg-1 bg-warning">9</div>
-                <div class="col-lg-1 bg-info">10</div>
-                <div class="col-lg-1 bg-danger">11</div>
-                <div class="col-lg-1 bg-success">12</div>
-            </div>
-        </div>
-
         <footer>
             <div class="newsletter">
                 <div class="container py-4">
@@ -448,13 +429,58 @@
             </div>
             <div class="footer">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-lg-3">
-                            <h3>OUR STORES</h3>
-                            <p>kjhkj</p>
+                    <div class="row pt-3 pb-4">
+                        <div class="col-lg-3 d-flex flex-column">
+                            <h3 class="mb-3">OUR STORES</h3>
+                            <div class="stores d-flex flex-column justify-content-between">
+                                <p>Feel free to visit our stores or contact us.</p>
+                                <p>Vinegade 109</br>5000 Odense</br>99886622</p>
+                                <p>Vestergade 910</br>9000 Aalborg</br>96819191</p>
+                                <div>
+                                    <a href="https://www.facebook.com/"><i class="fa fa-facebook mr-3" aria-hidden="true"></i></a>
+                                    <a href="https://www.twitter.com"><i class="fa fa-twitter mr-3" aria-hidden="true"></i></a>
+                                    <a href="https://www.plus.google.com"><i class="fa fa-google-plus mr-3" aria-hidden="true"></i></a>
+                                    <a href="https://www.vimeo.com"><i class="fa fa-vimeo mr-3" aria-hidden="true"></i></a>
+                                    <a href="https://www.vimeo.com"><i class="fa fa-rss" aria-hidden="true"></i></a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-lg-3"></div>
-                        <div class="col-lg-3"></div>
+                        <div class="col-lg-3 offset-lg-1 d-flex flex-column">
+                            <h3 class="mb-3">BLOG POSTS</h3>
+                            <a href="#">New sexy sport clothes are here!</a>
+                            <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <a href="#">Summer sales are coming!</a>
+                            <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div>
+                        <div class="col-lg-4 offset-lg-1">
+                            <h3 class="mb-3">SUPPORT</h3>
+                            <div class="support row">
+                                <div class="col-lg-6 d-flex flex-column">
+                                    <a href="#">Terms & Conditions</a>
+                                    <a href="#">FAQ</a>
+                                    <a href="#">Payment</a>
+                                    <a href="#">Refunds</a>
+                                    <a href="#">Track Order</a>
+                                    <a href="#">Services</a>
+                                    <a href="#">Privacy & Security</a>
+                                    <a href="#">Careers</a>
+                                    <a href="#">Press</a>
+                                    <a href="#">Corporate Information</a>
+                                </div>
+                                <div class="col-lg-6 d-flex flex-column">
+                                    <a href="#">Sizing</a>
+                                    <a href="#">Ordering</a>
+                                    <a href="#">Shipping</a>
+                                    <a href="#">Return Policy</a>
+                                    <a href="#">Affiliates</a>
+                                    <a href="#">Find a Store</a>
+                                    <a href="#">Site Map</a>
+                                    <a href="#">Sign up & Save</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
